--- a/Desarrollo/Mario Chanquin/Software Industrial/Software Industrial/Software Industrial.csproj
+++ b/Desarrollo/Mario Chanquin/Software Industrial/Software Industrial/Software Industrial.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ODBCConnect">
+      <HintPath>..\..\Librerías\ODBCConnect.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
@@ -45,6 +48,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ausencias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ausencias.Designer.cs">
+      <DependentUpon>ausencias.cs</DependentUpon>
+    </Compile>
+    <Compile Include="departamentos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="departamentos.Designer.cs">
+      <DependentUpon>departamentos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="empleados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="empleados.Designer.cs">
+      <DependentUpon>empleados.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +80,45 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="puestos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="puestos.Designer.cs">
+      <DependentUpon>puestos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Recursos Humanos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Recursos Humanos.Designer.cs">
+      <DependentUpon>Recursos Humanos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="rrhh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="rrhh.Designer.cs">
+      <DependentUpon>rrhh.cs</DependentUpon>
+    </Compile>
+    <Compile Include="tiempo laborado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="tiempo laborado.Designer.cs">
+      <DependentUpon>tiempo laborado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="vacaciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="vacaciones.Designer.cs">
+      <DependentUpon>vacaciones.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="ausencias.resx">
+      <DependentUpon>ausencias.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="departamentos.resx">
+      <DependentUpon>departamentos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="empleados.resx">
+      <DependentUpon>empleados.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +135,21 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="puestos.resx">
+      <DependentUpon>puestos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Recursos Humanos.resx">
+      <DependentUpon>Recursos Humanos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="rrhh.resx">
+      <DependentUpon>rrhh.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="tiempo laborado.resx">
+      <DependentUpon>tiempo laborado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="vacaciones.resx">
+      <DependentUpon>vacaciones.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -123,6 +198,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Recursos\PNG\usuarios-de-la-persona-icono-7851-128.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imageness\1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imageness\2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imageness\3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imageness\4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Imageness\5.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
