--- a/Desarrollo/Joseph Ajcan/Software Industrial/Software Industrial/Software Industrial.csproj
+++ b/Desarrollo/Joseph Ajcan/Software Industrial/Software Industrial/Software Industrial.csproj
@@ -342,6 +342,9 @@
   <ItemGroup>
     <None Include="Recursos\PNG\laboratory-icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Recursos\PNG\Search-icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
