--- a/Desarrollo/Noelia Zapeta/Software Industrial/Software Industrial/Software Industrial.csproj
+++ b/Desarrollo/Noelia Zapeta/Software Industrial/Software Industrial/Software Industrial.csproj
@@ -11,6 +11,21 @@
     <AssemblyName>Software Industrial</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <PublishUrl>publicar\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,6 +47,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Navegador">
+      <HintPath>DLL\Navegador.dll</HintPath>
+    </Reference>
+    <Reference Include="ODBCConnect">
+      <HintPath>DLL\ODBCConnect.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
@@ -45,11 +66,89 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Login.cs">
+    <Compile Include="Inventario\reportes.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.cs">
-      <DependentUpon>Login.cs</DependentUpon>
+    <Compile Include="Inventario\reportes.Designer.cs">
+      <DependentUpon>reportes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Inventario\movimientos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Inventario\movimientos.Designer.cs">
+      <DependentUpon>movimientos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Inventario\nota_ingreso.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Inventario\nota_ingreso.Designer.cs">
+      <DependentUpon>nota_ingreso.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Inventario\nota_salida.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Inventario\nota_salida.Designer.cs">
+      <DependentUpon>nota_salida.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Inventario\productos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Inventario\productos.Designer.cs">
+      <DependentUpon>productos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Inventario\inventarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Inventario\inventarios.Designer.cs">
+      <DependentUpon>inventarios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Produccion\buscar_formula.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Produccion\buscar_formula.Designer.cs">
+      <DependentUpon>buscar_formula.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Produccion\asignacion_maquinaria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Produccion\asignacion_maquinaria.Designer.cs">
+      <DependentUpon>asignacion_maquinaria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Produccion\busca_empleado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Produccion\busca_empleado.Designer.cs">
+      <DependentUpon>busca_empleado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Produccion\crear_receta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Produccion\crear_receta.Designer.cs">
+      <DependentUpon>crear_receta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Produccion\configuracion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Produccion\configuracion.Designer.cs">
+      <DependentUpon>configuracion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Produccion\gestion_produccion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Produccion\gestion_produccion.Designer.cs">
+      <DependentUpon>gestion_produccion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="login.Designer.cs">
+      <DependentUpon>login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Produccion\maquinaria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Produccion\maquinaria.Designer.cs">
+      <DependentUpon>maquinaria.cs</DependentUpon>
     </Compile>
     <Compile Include="MDI.cs">
       <SubType>Form</SubType>
@@ -57,13 +156,61 @@
     <Compile Include="MDI.Designer.cs">
       <DependentUpon>MDI.cs</DependentUpon>
     </Compile>
+    <Compile Include="Produccion\produccion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Produccion\produccion.Designer.cs">
+      <DependentUpon>produccion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Login.resx">
-      <DependentUpon>Login.cs</DependentUpon>
+    <EmbeddedResource Include="Inventario\reportes.resx">
+      <DependentUpon>reportes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Inventario\movimientos.resx">
+      <DependentUpon>movimientos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Inventario\nota_ingreso.resx">
+      <DependentUpon>nota_ingreso.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Inventario\nota_salida.resx">
+      <DependentUpon>nota_salida.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Inventario\productos.resx">
+      <DependentUpon>productos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Inventario\inventarios.resx">
+      <DependentUpon>inventarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Produccion\buscar_formula.resx">
+      <DependentUpon>buscar_formula.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Produccion\asignacion_maquinaria.resx">
+      <DependentUpon>asignacion_maquinaria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Produccion\busca_empleado.resx">
+      <DependentUpon>busca_empleado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Produccion\crear_receta.resx">
+      <DependentUpon>crear_receta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Produccion\configuracion.resx">
+      <DependentUpon>configuracion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Produccion\gestion_produccion.resx">
+      <DependentUpon>gestion_produccion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="login.resx">
+      <DependentUpon>login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Produccion\maquinaria.resx">
+      <DependentUpon>maquinaria.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MDI.resx">
       <DependentUpon>MDI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Produccion\produccion.resx">
+      <DependentUpon>produccion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -123,6 +270,26 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Recursos\PNG\usuarios-de-la-persona-icono-7851-128.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.5 %28x86 y x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="RRHH\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
